# fluidnet_cxx

./: .gitignore  CMakeLists.txt  README.md
pytorch/: .gitignore  RayleighTaylor.py  RayleighTaylorTemperature.py  benchmark.py  config.json  config.py  config.yaml  cylinder.py  dataset_divergence.py  fluid_net_simulate.py  fluid_net_simulate_one.py  fluid_net_train.py  fluid_net_train_test.py  load_manta_data.py  plot_5loss.py  plot_loss.py  plume.py  plumeConfig.json  plumeConfig.yaml  plumeProfile.yaml  plume_paper.py  plume_profiling.py  print_output.py  rayleighTaylorConfig.yaml  test_fluid.py  test_loader.py  trainConfig.yaml
pytorch/fluid/: flags_to_occupancy.py  set_wall_bcs.py  velocity_divergence.py
pytorch/lib/: .gitignore  __init__.py  argument_parser.py  config.py  dataset_load.py  load_manta_data.py  model.py  multi_scale_net.py  plot_field.py  plot_field_temp.py  simulate.py  util_print.py
pytorch/lib/fluid/: __init__.py  cell_type.py  flags_to_occupancy.py  geometry_utils.py  grid.py  grid_save.py  init_conditions.py  set_wall_bcs.py  set_wall_bcs_inflow.py  set_wall_bcs_stick.py  source_terms.py  source_terms_test.py  util.py  velocity_divergence.py  velocity_update.py  viscosity.py
pytorch/lib/fluid/cpp/: .gitignore  advect_type.cpp  advection.cpp  advection.h  advection.py  calc_line_trace.cpp  calc_line_trace.h  fluids_init.cpp  fluids_init.h  grid.cpp  grid.h  jit.py  setup.py  solve_linear_sys.py
pytorch/plots/: FluidNetJacobi_div.npy  FluidNet_Jacobi.npy  FluidNet_LongTerm.npy  FluidNet_ShortTerm.npy  plot_5loss.py
simulate/: .simulate.cpp.swp  CMakeLists.txt  \  grid.cpp  grid.h  simulate.cpp  ten_test.cpp
solver_cpp/: CMakeLists.txt
solver_cpp/simulate/: CMakeLists.txt  simulate.cpp
solver_cpp/src/: fluid.h
solver_cpp/src/advection/: advect_type.h  advection.cpp  calc_line_trace.h
solver_cpp/src/boundaryCondition/: bcs.h
solver_cpp/src/fluidnet_implementation/: grid.cpp  grid.h  int3.h  tfluids.cpp  vec3.cpp  vec3.h
solver_cpp/src/grid/: bool_conversion.h  grid.cpp  grid.h
solver_cpp/src/projection/: solve_linear_sys.cpp  solve_linear_sys.h  update_vel.h
solver_cpp/src/sourceTerms/: source_term.h
solver_cpp/test/: load_manta_data.h  plot_utils.h  test_fluid.cpp
src/: CMakeLists.txt  fluid.h  fluid_net.h
src/advection/: .gitignore  advect_type.cpp  advection.cpp  advection.h  bcs.h  calc_line_trace.cpp  calc_line_trace.h  div.cpp  div.h  solveLinearSys.cpp  solveLinearSys.h  tfluids_thirdparty_temp.cc  updateVel.cpp  updateVel.h
src/boundaryCondition/: bcs.cpp  bcs.h
src/fluidnet_implementation/: CMakeLists.txt  advect_type.cpp  advect_type.h  calc_line_trace.cpp  init.cpp
src/grid/: bool_conversion.cpp  bool_conversion.h  cell_type.h  grid.cpp  grid.h  grid_new.cpp  grid_new.h  grid_scalar.cpp  grid_scalar.h  int3.h  stack_trace.h  vec3.cpp  vec3.h
src/projection/: .gitignore  div.cpp  div.h  div_ten.cpp  solve_linear_sys.cpp  solve_linear_sys.h  update_vel.cpp  update_vel.h  update_vel_ten.cpp
src/sourceTerms/: source_term.cpp  source_term.h
test/: .test_grid.cpp.swp  ATenConfig.cmake  CMakeLists.txt  OLDCMakeLists_.txt  load_manta_data.h  plot_utils.h  simulate.cpp  test_fluid.cpp  test_grid.cpp  type_test.h
test/src/grid/: grid.cc  grid.h
trained_models/ScaleNet_ShortTerm_LongTermLoss/: ScaleNet_ShortTerm_LongTermLoss_saved.py  convModel_conf.pth  convModel_mconf.pth
