CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("fluidnet_cxx" LANGUAGES CXX)

SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC")

#ATen PACKAGE
FIND_PACKAGE(ATen REQUIRED)
INCLUDE_DIRECTORIES(${ATEN_INCLUDE_DIR})

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
