CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("fluidnet_cxx" LANGUAGES CXX)

INCLUDE(CMakeDependentOption)
OPTION(FLUID_NO_TEST "Do not build Fluid test binaries" ON)

SET(CMAKE_BUILD_TYPE Release)

#ATen PACKAGE
FIND_PACKAGE(ATen REQUIRED)
INCLUDE_DIRECTORIES(${ATEN_INCLUDE_DIR})

FIND_PACKAGE(OpenMP)
IF(OPENMP_FOUND)
  MESSAGE(STATUS "Compiling with OpenMP support")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ENDIF(OPENMP_FOUND)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -D_MWAITXINTRIN_H_INCLUDED")

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_SUBDIRECTORY(src)
IF (FLUID_NO_TEST)
  ADD_SUBDIRECTORY(simulate)
ELSE ()
  ADD_SUBDIRECTORY(test)
ENDIF()



