SET (TEST_SOURCES test_grid.cpp)

MESSAGE(INFO ${CMAKE_CURRENT_SOURCE_DIR})

ADD_EXECUTABLE(unit_tests ${TEST_SOURCES})

TARGET_INCLUDE_DIRECTORIES(unit_tests PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)
LINK_DIRECTORIES(unit_tests $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)

TARGET_LINK_LIBRARIES(unit_tests FluidNet ${ATEN_LIBRARIES})
TARGET_LINK_LIBRARIES(unit_tests ${OpenCV_LIBS} )
