SET(SIM_SRC simulate.cpp)

ADD_EXECUTABLE(fluidnet_sim ${SIM_SRC})

TARGET_INCLUDE_DIRECTORIES(fluidnet_sim PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)
LINK_DIRECTORIES(fluidnet_sim $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)

TARGET_LINK_LIBRARIES(fluidnet_sim FluidNet ATen)
TARGET_LINK_LIBRARIES(fluidnet_sim ${OpenCV_LIBS} )
